[PDF Plugin] Increase read buffer size

BUG=666665

R=spelchat@chromium.org, thestig@chromium.org

Review-Url: https://codereview.chromium.org/2525903002
Cr-Commit-Position: refs/heads/master@{#434306}

Former-commit-id: 9c7322baa752411c1f983d6305f06842d0670373